[package]
edition = "2021"
name = "duck-node"
version = "0.1.0"

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
lazy_static = "1.4.0"
thiserror = "1.0.31"
regex = "1"
rust-argon2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = { version = "2", features = ["chrono-0_4", "serde_with", "uuid-0_8"] }