[package]
edition = "2021"
name = "duck-node"
version = "0.1.0"

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
lazy_static = "1.4.0"
thiserror = "1.0.31"
regex = "1.5.5"
rust-argon2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_regex = "1.1.0"
serde_derive = "1.0.137"
bson = { version = "2", features = ["chrono-0_4", "serde_with", "uuid-0_8"] }
mongodb = { version = "2.0.0", default-features = false, features = ["sync"] }
